--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "fortawesome": "0.0.1-security",
+    "ml-naivebayes": "^4.0.0",
+    "natural": "^7.0.6",
     "preline": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "simple-statistics": "^7.8.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
-    "@types/react": "^18.2.66",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.2.22",
+    "@types/react-fontawesome": "^1.6.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
